# load_testing

./: .gitignore  README.md  app.py  pyproject.toml
locust_files/: cpu_bound_io_bound.py  demo_config.conf
src/: main.py
src/api/cpu_bound/: __init__.py  routers.py
src/api/io_bound/: __init__.py  query.py  routers.py
src/config/: config.py  db.py
src/models/: test_data.py
src/utils/: db_connector.py
