[tool.poetry]
name = "load-testing"
version = "0.1.0"
description = ""
authors = ["TingYi <a75896453@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.114.1"}
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.34"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
locust = "^2.31.5"
isort = "^5.13.2"
ruff = "^0.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]